Fixed transformation and doc: - Fixed documentation typo - Fixed transformation and workspace import